--- a/j_1_hello_java.ipynb
+++ b/j_1_hello_java.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 1. Hello Java\n",
     "\n",
-    "Last updated 20180521MON1230 classpath+javac+java, 20180310SAT0948\n",
+    "Last updated 20190305TUE 20180521MON1230 classpath+javac+java, 20180310SAT0948\n",
     "\n",
     "## 1.1 학습내용\n",
     "\n",
@@ -20,27 +20,6 @@
     "* 프로그래밍을 막상 하려면 몇 줄짜리는 만들 수 있어도, 어떤 주제로 일정 규모가 되면 눈 앞이 깜깜한 경우가 많다. 이 후 **몇 백 줄 정도**의 객체지향 프로그램을 구현할 수 있는 능력을 기대한다.\n",
     "    * 클래스 5개 정도 - 연관, 상속, 다형성 사용\n",
     "    * 클래스 1개에 100줄 정도, 수 백 줄 규모의 프로그래밍을 만들 수 있다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* 강의를 어떻게 하려고 하나\n",
-    "    * **Object first** approach. 데이터 타잎, 함수 등을 먼저 배우기 보다는, 객체지향으로 바로 시작한다.\n",
-    "    * 예제로 배운다 Learn by example\n",
-    "        * 예제는 쉽지만, 너무 쉽지 않고 재미있게\n",
-    "    * 그림으로 배운다 UML\n",
-    "    * 프로그래밍에 '재미'를 가지도록 한다.\n",
-    "    * 객체지향 모든 것을 가르치지는 않는다. 이 강의를 마치고 나면, **자기 학습**을 해 나갈 수 있다.\n",
-    "\n",
-    "* \"목적지에 도착하니 문이 열렸다.\"\n",
-    "    * 문을 여는 사람은 결국 거기에 도착하는 사람이다.\n",
-    "    * 거기에 가려는 의지, 노력이 프로그래머를 만들 것."
    ]
   },
   {
@@ -74,12 +53,13 @@
     "## 1.2 java 소개\n",
     "\n",
     "왜 자바를 배워야 하는가? 자바는 순수 객체지향 언어이고, 이식성이 높다는 등의 특징만 가지고 그 이유를 설명할 수는 없다. 자바는 인기가 높은 언어이다. 자바는 많이 사용되고 있어 **취업기회**가 높다. 프로그래밍 언어의 인기를 가늠할 수 있는 사이트에서 자바는 경쟁언어인 C++를 앞서고 있다.\n",
-    "* [tiobe](http://www.tiobe.com/tiobe-index/) - 2018년 현재 1위\n",
-    "* [PYPL PouplaritY of Programming Language](http://pypl.github.io/PYPL.html) - 2018년 현재 1위\n",
+    "* [tiobe](http://www.tiobe.com/tiobe-index/) - 2019년 현재 1위\n",
+    "* [PYPL PouplaritY of Programming Language](http://pypl.github.io/PYPL.html) - 2019년 현재 2위\n",
     "\n",
     "참고로 자바는 다른 언어와 비교해서 어느 분야에서 많이 사용되고 있는지 살펴보자. [어떤 프로그래밍 언어를 배워야 할까?](https://www.codementor.io/learn-programming/beginner-programming-language-job-salary-community)\n",
     "* 기업에서 많이 사용하는 언어 java\n",
-    "* 웹에서 사용하지 않을 수 없는 언어 javascript\n",
+    "* 응용소프트웨어, 시스템 소프트웨어나 운영체제 등을 만들 때 사용하는 언어 C 또는 C++\n",
+    "* 웹 브라우저에서 동작하는 프로그램을 작성할 때 사용하는 언어 Javascript\n",
     "* 데이터분석에서 많이 사용되는 언어 Python\n",
     "* 데이를 체계적으로 사용할려면 배워야하는 언어 SQL"
    ]
@@ -127,9 +107,10 @@
     "\n",
     "java version | codename | release | number of classes\n",
     "-----|-----|-----|-----\n",
-    "java 2 SE 5 with JDK 1.8 | - | 2014 | 4,240\n",
-    "java 2 SE 5 with JDK 1.7 | Dolphin | 2011 | 4,024\n",
-    "java 2 SE 5 with JDK 1.6 | Mustang | 2006 | 3,793\n",
+    "java 2 SE 9  | - | 2017 | 6,005\n",
+    "java 2 SE 8 with JDK 1.8 | - | 2014 | 4,240\n",
+    "java 2 SE 7 with JDK 1.7 | Dolphin | 2011 | 4,024\n",
+    "java 2 SE 6 with JDK 1.6 | Mustang | 2006 | 3,793\n",
     "java 2 SE 5 with JDK 1.5 | Tiger | 2004 | 3,279\n",
     "java 2 SE with SDK 1.4 | Merlin | 2002 | 2,991\n",
     "java 2 SE with SDK 1.3 | Kestrel | 2000 | 1,824\n",
@@ -227,7 +208,7 @@
     "설치하고 나서 잘 되었는지 확인한다. java와 javac의 경로 및 버전 모두 확인한다. \n",
     "윈도우는:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "C:\\>where java\n",
     "C:\\Program Files\\Java\\jdk-9.0.1\\bin\\java.exe\n",
     "\n",
@@ -239,7 +220,7 @@
     "\n",
     "리눅스는:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "$ which java\n",
     "/usr/bin/java\n",
     "```\n",
@@ -341,7 +322,7 @@
     "    * 'classes'는 **컴파일한 파일**들을 저장\n",
     "    * 'src'는 **소스코드 파일**들을 저장\n",
     "\n",
-    "```\n",
+    "```python\n",
     "C:\\Code\\myProject\\ 리눅스는 '/home/user/Code/myProject\n",
     "         |\n",
     "         ---> lib\\\n",
@@ -424,8 +405,17 @@
     "\n",
     "* 윈도우에서 java를 저장하고 컴파일하면 \"error: illegal character: '\\ufeff'\"\n",
     "    * Notepad에서 ANSI 형식으로 저장하면 BOM (Byte Order Mark) 문제\n",
-    "    * javac -encoding \"unicode\"로 컴파일 형식을 unicode로 저장한다.\n",
-    "\n",
+    "    * javac -encoding \"unicode\"로 컴파일 형식을 unicode로 저장한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "#### 실행하기\n",
     "\n",
     "* java: JVM runs java byte code (.class)\n",
@@ -462,8 +452,8 @@
     "* 컴파일할 때, classpath 명시해주거나 환경변수설정하고 생략\n",
     "    * 리눅스 classpath 설정\n",
     "```python\n",
-    "$ export CLASSPATH=$CLASSPATH:./classes/\n",
-    "$ echo $CLASSPATH 또는 $ printenv\n",
+    "\\$ export CLASSPATH=\\$CLASSPATH:./classes/\n",
+    "\\$ echo \\$CLASSPATH 또는 $ printenv\n",
     "```\n",
     "    \n",
     "    * 윈도우 classpath 설정\n",
