--- a/j_1_hello_jshell.ipynb
+++ b/j_1_hello_jshell.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 1. Hello jshell\n",
     "\n",
-    "Last update 20180310SAT 1738\n",
+    "Last update 20180305TUE1139 20180310SAT1738\n",
     "\n",
     "## 1.1 학습내용\n",
     "\n",
@@ -800,7 +800,7 @@
     "jshell에서는 **임시파일**을 만들어 편집을 한다. 다른 에디터를 사용하는 경우 변경이 반영될 수 있도록 '**-wait**'를 적어준다.\n",
     "편집이 끝나면 저장을 한다.\n",
     "\n",
-    "```\n",
+    "```java\n",
     "/set editor vim\n",
     "/l\n",
     "/edit 1\n",
