--- a/j_6_datastructure.ipynb
+++ b/j_6_datastructure.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 6. 데이터구조\n",
     "\n",
-    "Last updated 20180522TUE2200 20180512SUN1600 20180329THR1730\n",
+    "Last updated 20180622FRI1800 20180512SUN1600 20180329THR1730\n",
     "\n",
     "## 6.1 학습내용\n",
     "\n",
@@ -4989,8 +4989,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "key 문자열, 값 문자열로 HashMap을 만들어 보자.\n",
+    "Windows key로 \"2000\"을 저장한다.\n",
+    "동일 key로 \"XP\"를 저장하면 동일 key의 값이 갱신된다.\n",
+    "key는 중복되어서는 안되기 때문이다."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -5008,25 +5022,18 @@
       "\r\n",
       " m1.put(\"Windows\", \"2000\");\r\n",
       "|  Expression value is: null\r\n",
-      "|    assigned to temporary variable $79 of type String\r\n",
+      "|    assigned to temporary variable $2 of type String\r\n",
       "\r\n",
       " m1.put(\"Windows\", \"XP\");\r\n",
       "|  Expression value is: \"2000\"\r\n",
-      "|    assigned to temporary variable $80 of type String\r\n",
+      "|    assigned to temporary variable $3 of type String\r\n",
       "\r\n",
       " m1.put(\"Language\", \"Java\");\r\n",
       "|  Expression value is: null\r\n",
-      "|    assigned to temporary variable $81 of type String\r\n",
+      "|    assigned to temporary variable $4 of type String\r\n",
       "\r\n",
-      " m1.put(\"Website\", \"programcreek.com\");\r\n",
-      "|  Expression value is: null\r\n",
-      "|    assigned to temporary variable $82 of type String\r\n",
-      "\r\n",
-      " System.out.println(\"Map Elements\");\r\n",
-      "Map Elements\r\n",
-      "\r\n",
-      " System.out.print(\"\\t\" + m1);\r\n",
-      "\t{Language=Java, Website=programcreek.com, Windows=XP}\r\n"
+      " System.out.print(m1);\r\n",
+      "{Language=Java, Windows=XP}\r\n"
      ]
     }
    ],
@@ -5035,9 +5042,369 @@
     "m1.put(\"Windows\", \"2000\");\n",
     "m1.put(\"Windows\", \"XP\");\n",
     "m1.put(\"Language\", \"Java\");\n",
-    "m1.put(\"Website\", \"programcreek.com\");\n",
-    "System.out.println(\"Map Elements\");\n",
-    "System.out.print(\"\\t\" + m1);"
+    "System.out.print(m1);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "국제전화 코드를 구성해보자.\n",
+    "물론 이차원 배열로 만들어도 된다.\n",
+    "\n",
+    "2016년 현재 코드는 지역 1부터 9까지 아홉 개로 나뉘어 그 지역코드로 시작한다.\n",
+    "\n",
+    "코드구분 | 해당 국가들\n",
+    "-----|-----\n",
+    "지역 1 | 북아메리카, 카리브 제도 일부 국가\n",
+    "지역 2 | 아프리카, 일부 대서양 국가\n",
+    "지역 3, 4 | 유럽 국가\n",
+    "지역 5 | 멕시코, 중앙 및 남아메리카 지역, 서인도 제도의 국가\n",
+    "지역 6 | 남태평양과 오세아니아 국가\n",
+    "지역 7 | 러시아 및 소비에트 연방 국가\n",
+    "지역 8 | 동아시아 국가\n",
+    "지역 9 | 서아시아, 남아시아, 중앙아시아, 중동 지역 국가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " String[][] callingCodes = {\r\n",
+      "     {\"82\",\"South Korea\"},{\"81\",\"Japan\"},\r\n",
+      "     {\"1\",\"United States of America\"},{\"44\",\"United Kingdom\"}\r\n",
+      " };\r\n",
+      "|  Added variable callingCodes of type String[][] with initial value [[Ljava.lang.String;@f6c48ac\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "String[][] callingCodes = {\n",
+    "    {\"82\",\"South Korea\"},{\"81\",\"Japan\"},\n",
+    "    {\"1\",\"United States of America\"},{\"44\",\"United Kingdom\"}\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " callingCodes[0][0];\r\n",
+      "|  Expression value is: \"82\"\r\n",
+      "|    assigned to temporary variable $7 of type String\r\n",
+      "\r\n",
+      " callingCodes[1][0];\r\n",
+      "|  Expression value is: \"81\"\r\n",
+      "|    assigned to temporary variable $8 of type String\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "callingCodes[0][0];\n",
+    "callingCodes[1][0];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " for(String[] c:callingCodes)\r\n",
+      "     System.out.println(c[0]);\r\n",
+      "82\r\n",
+      "81\r\n",
+      "1\r\n",
+      "44\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "for(String[] c:callingCodes)\n",
+    "    System.out.println(c[0]);\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Map을 사용해서 2차원 구조를 표현할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Map<Integer, String> callCodes = new HashMap<Integer, String>();\r\n",
+      "|  Added variable callCodes of type Map<Integer, String> with initial value {}\r\n",
+      "\r\n",
+      " callCodes.put(81, \"Japan\");\r\n",
+      "|  Expression value is: null\r\n",
+      "|    assigned to temporary variable $3 of type String\r\n",
+      "\r\n",
+      " callCodes.put(1, \"USA\");\r\n",
+      "|  Expression value is: null\r\n",
+      "|    assigned to temporary variable $4 of type String\r\n",
+      "\r\n",
+      " callCodes.put(82, \"Korea\");\r\n",
+      "|  Expression value is: null\r\n",
+      "|    assigned to temporary variable $5 of type String\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Map<Integer, String> callCodes = new HashMap<Integer, String>();\n",
+    "callCodes.put(81, \"Japan\");\n",
+    "callCodes.put(1, \"USA\");\n",
+    "callCodes.put(82, \"Korea\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Map에 저장된 국가코드를 출력해 보자.\n",
+    "2016년 현재 코드는 지역 1부터 9까지 아홉 개로 나뉘어 그 지역코드로 시작한다.\n",
+    "\n",
+    "코드구분 | 해당 국가들\n",
+    "-----|-----\n",
+    "지역 1 | 북아메리카, 카리브 제도 일부 국가\n",
+    "지역 2 | 아프리카, 일부 대서양 국가\n",
+    "지역 3, 4 | 유럽 국가\n",
+    "지역 5 | 멕시코, 중앙 및 남아메리카 지역, 서인도 제도의 국가\n",
+    "지역 6 | 남태평양과 오세아니아 국가\n",
+    "지역 7 | 러시아 및 소비에트 연방 국가\n",
+    "지역 8 | 동아시아 국가\n",
+    "지역 9 | 서아시아, 남아시아, 중앙아시아, 중동 지역 국가\n",
+    "\n",
+    "동아시아 국가를 출력해 보자.\n",
+    "\n",
+    "줄 | 설명\n",
+    "-----|-----\n",
+    "2 | key를 읽는다.\n",
+    "3 | key는 정수이므로 문자열로 바꾸어 첫 문자 char를 읽어서 '8'로 시작하는지 비교한다.\n",
+    "4 | 해당 key의 value를 읽는다.\n",
+    "5 | key, value를 출력한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " for (Map.Entry<Integer, String> entry : callCodes.entrySet()) {\r\n",
+      "     Integer code=entry.getKey();\r\n",
+      "     if(code.toString().charAt(0) == '8') {\r\n",
+      "         String country = entry.getValue();\r\n",
+      "         System.out.printf(\"%s:%s\\n\",code,country);\r\n",
+      "         \r\n",
+      "     }\r\n",
+      " }\r\n",
+      "81:Japan\r\n",
+      "82:Korea\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (Map.Entry<Integer, String> entry : callCodes.entrySet()) {\n",
+    "    Integer code=entry.getKey();\n",
+    "    if(code.toString().charAt(0) == '8') {\n",
+    "        String country = entry.getValue();\n",
+    "        System.out.printf(\"%s:%s\\n\",code,country);\n",
+    "        \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Iterator를 사용해보자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Set<Integer> setCodes = callCodes.keySet();\r\n",
+      "|  Modified variable setCodes of type Set<Integer> with initial value [81, 1, 82]\r\n",
+      "|    Update overwrote variable setCodes\r\n",
+      "\r\n",
+      " Iterator<Integer> iterator = setCodes.iterator();\r\n",
+      "|  Modified variable iterator of type Iterator<Integer> with initial value java.util.HashMap$KeyIterator@3159c4b8\r\n",
+      "|    Update overwrote variable iterator\r\n",
+      "\r\n",
+      "  \r\n",
+      "\r\n",
+      " while (iterator.hasNext()) {\r\n",
+      "     Integer code = iterator.next();\r\n",
+      "     if(code.toString().charAt(0) == '8') {\r\n",
+      "         String country = callCodes.get(code);\r\n",
+      "         System.out.printf(\"%d:%s\\n\",code,country);\r\n",
+      "     }\r\n",
+      " }\r\n",
+      "81:Japan\r\n",
+      "82:Korea\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Set<Integer> setCodes = callCodes.keySet();\n",
+    "Iterator<Integer> iterator = setCodes.iterator();\n",
+    " \n",
+    "while (iterator.hasNext()) {\n",
+    "    Integer code = iterator.next();\n",
+    "    if(code.toString().charAt(0) == '8') {\n",
+    "        String country = callCodes.get(code);\n",
+    "        System.out.printf(\"%d:%s\\n\",code,country);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "함수로 만들어 보자.\n",
+    "Map getCountries(char region)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Set<Integer> setCodes = callCodes.keySet();\r\n",
+      "|  Modified variable setCodes of type Set<Integer> with initial value [81, 1, 82]\r\n",
+      "|    Update overwrote variable setCodes\r\n",
+      "\r\n",
+      " Iterator<Integer> iterator = setCodes.iterator();\r\n",
+      "|  Modified variable iterator of type Iterator<Integer> with initial value java.util.HashMap$KeyIterator@4bec1f0c\r\n",
+      "|    Update overwrote variable iterator\r\n",
+      "\r\n",
+      " \r\n",
+      "\r\n",
+      " Map getCountries(char region) {\r\n",
+      "     Map<Integer, String> countries = new HashMap<Integer, String>();\r\n",
+      "     while (iterator.hasNext()) {\r\n",
+      "         Integer code = iterator.next();\r\n",
+      "         if(code.toString().charAt(0) == region) {\r\n",
+      "             String country = callCodes.get(code);\r\n",
+      "             countries.put(code,country);\r\n",
+      "             System.out.printf(\"%d:%s\\n\",code,country);\r\n",
+      "         }\r\n",
+      "     }\r\n",
+      "     return countries;\r\n",
+      " }\r\n",
+      "|  Added method getCountries(char)\r\n",
+      "\r\n",
+      " \r\n",
+      "\r\n",
+      " System.out.println(getCountries('8'));\r\n",
+      "81:Japan\r\n",
+      "82:Korea\r\n",
+      "{81=Japan, 82=Korea}\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Set<Integer> setCodes = callCodes.keySet();\n",
+    "Iterator<Integer> iterator = setCodes.iterator();\n",
+    "\n",
+    "Map getCountries(char region) {\n",
+    "    Map<Integer, String> countries = new HashMap<Integer, String>();\n",
+    "    while (iterator.hasNext()) {\n",
+    "        Integer code = iterator.next();\n",
+    "        if(code.toString().charAt(0) == region) {\n",
+    "            String country = callCodes.get(code);\n",
+    "            countries.put(code,country);\n",
+    "            System.out.printf(\"%d:%s\\n\",code,country);\n",
+    "        }\n",
+    "    }\n",
+    "    return countries;\n",
+    "}\n",
+    "\n",
+    "System.out.println(getCountries('8'));"
    ]
   },
   {
@@ -6480,148 +6847,6 @@
     "        * 따라서 위치 (X,Y)의 각 값을 얻기 위해서 인덱스를 사용해야 한다.\n",
     "    * 두번째는 인덱스가 파이프에 들어가 있다고 생각하면 된다.\n",
     "        * 따라서 인덱스를 중첩해서 자료를 꺼내온다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " String[][] callingCodes = {\r\n",
-      "     {\"82\",\"South Korea\"},{\"81\",\"Japan\"},\r\n",
-      "     {\"1\",\"United States of America\"},{\"44\",\"United Kingdom\"}\r\n",
-      " };\r\n",
-      "|  Added variable callingCodes of type String[][] with initial value [[Ljava.lang.String;@59ec2012\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "String[][] callingCodes = {\n",
-    "    {\"82\",\"South Korea\"},{\"81\",\"Japan\"},\n",
-    "    {\"1\",\"United States of America\"},{\"44\",\"United Kingdom\"}\n",
-    "};"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " callingCodes[0][0];\r\n",
-      "|  Expression value is: \"82\"\r\n",
-      "|    assigned to temporary variable $8 of type String\r\n",
-      "\r\n",
-      " callingCodes[1][0];\r\n",
-      "|  Expression value is: \"81\"\r\n",
-      "|    assigned to temporary variable $9 of type String\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "callingCodes[0][0];\n",
-    "callingCodes[1][0];"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " for(String[] c:callingCodes)\r\n",
-      "     System.out.println(c[0]);\r\n",
-      "82\r\n",
-      "81\r\n",
-      "1\r\n",
-      "44\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "for(String[] c:callingCodes)\n",
-    "    System.out.println(c[0]);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* dict를 사용해서 2차원 구조를 표현할 수 있다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Map<Integer, String> wc = new HashMap<Integer, String>();\r\n",
-      "|  Added variable wc of type Map<Integer, String> with initial value {}\r\n",
-      "\r\n",
-      " wc.put(81, \"Japan\");\r\n",
-      "|  Expression value is: null\r\n",
-      "|    assigned to temporary variable $12 of type String\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "Map<Integer, String> wc = new HashMap<Integer, String>();\n",
-    "wc.put(81, \"Japan\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " wc\r\n",
-      "|  Variable wc of type Map<Integer,String> has value {81=Japan}\r\n",
-      "\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "wc"
    ]
   },
   {
