--- a/j_1_hello_jshell.ipynb
+++ b/j_1_hello_jshell.ipynb
@@ -570,7 +570,7 @@
    "source": [
     "### 설정\n",
     "\n",
-    "몇 가지 설정을 할 수 있다. 'feecback'과 'editor' 설정을 살펴보자.\n",
+    "몇 가지 설정을 할 수 있다. 'feedback'과 'editor' 설정을 살펴보자.\n",
     "* 명령어를 실행하고 결과를 보여주는 feedback이 보통은 내용이 많다. 이를 제거하고 싶으면 'off'로 설정한다.\n",
     "```java\n",
     "jshell> /set feedback\n",
@@ -795,7 +795,22 @@
    "source": [
     "자바에서 제공하는 에디터가 편리하지 않으면 자신이 선호하는 것을 사용해도 된다.\n",
     "이 경우, 선호하는 에디터를 등록한다.\n",
-    "**절대경로**를 넣고 /set editor \"c:/Users/jsl/AppData/Local/atom/atom.exe\" -wait\n",
+    "**절대경로**를 넣고 /set editor -wait -retain \"c:/Users/jsl/AppData/Local/atom/atom.exe\"\n",
+    "```python\n",
+    "jshell> /set editor -wait -retain c:/Users/jsl/AppData/Local/atom/bin/atom.cmd\n",
+    "|  Editor set to: -wait c:/Users/jsl/AppData/Local/atom/bin/atom.cmd\n",
+    "|  Editor setting retained: -wait c:/Users/jsl/AppData/Local/atom/bin/atom.cmd\n",
+    "\n",
+    "jshell> /set editor\n",
+    "|  /set editor -retain -wait c:/Users/jsl/AppData/Local/atom/bin/atom.cmd\n",
+    "\n",
+    "jshell> /list\n",
+    "\n",
+    "   3 : int a =4;\n",
+    "\n",
+    "jshell> /edit 1\n",
+    "|  Press return to leave edit mode.\n",
+    "```\n",
     "\n",
     "jshell에서는 **임시파일**을 만들어 편집을 한다. 다른 에디터를 사용하는 경우 변경이 반영될 수 있도록 '**-wait**'를 적어준다.\n",
     "편집이 끝나면 저장을 한다.\n",
