--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -1167,7 +1167,7 @@
      "output_type": "stream",
      "text": [
       " Hello h1=new Hello();\r\n",
-      "|  Added variable h1 of type Hello with initial value Hello@27c20538\r\n",
+      "|  Added variable h1 of type Hello with initial value Hello@239963d8\r\n",
       "\r\n",
       " h1.sayHello();\r\n",
       "hello world\r\n",
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1195,7 +1195,7 @@
      "output_type": "stream",
      "text": [
       " Hello h2=new Hello();\r\n",
-      "|  Added variable h2 of type Hello with initial value Hello@6e1567f1\r\n",
+      "|  Added variable h2 of type Hello with initial value Hello@31a5c39e\r\n",
       "\r\n",
       " h2.sayHello();\r\n",
       "hello world\r\n",
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1244,7 +1244,7 @@
       "hello jsl\r\n",
       "\r\n",
       " h1.sayHello();\r\n",
-      "hello jsl\r\n",
+      "hello world\r\n",
       "\r\n"
      ]
     }
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1279,16 +1279,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " h2.setWhom(\"jsl\");\r\n",
-      "\r\n",
-      " h2.sayHello();\r\n",
-      "hello jsl\r\n",
-      "\r\n",
-      " h1.sayHello();\r\n",
-      "hello world\r\n",
-      "\r\n",
       " h1=h2;\r\n",
-      "|  Variable h1 has been assigned the value Hello@6e1567f1\r\n",
+      "|  Variable h1 has been assigned the value Hello@31a5c39e\r\n",
       "\r\n",
       " h1.sayHello();\r\n",
       "hello jsl\r\n",
@@ -1390,10 +1382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
-    "scrolled": false,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1410,14 +1401,6 @@
       "     }\r\n",
       " }\r\n",
       "|  Added class Subway\r\n",
-      "\r\n",
-      " \r\n",
-      "\r\n",
-      " Subway mySub=new Subway();\r\n",
-      "|  Added variable mySub of type Subway with initial value Subway@239963d8\r\n",
-      "\r\n",
-      " mySub.run()\r\n",
-      "0 line runs\r\n",
       "\r\n"
      ]
     }
@@ -1428,8 +1411,34 @@
     "    void run() {\n",
     "        System.out.println(line+\" line runs\");\n",
     "    }\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Subway mySub=new Subway();\r\n",
+      "|  Added variable mySub of type Subway with initial value Subway@5cb9f472\r\n",
+      "\r\n",
+      " mySub.run()\r\n",
+      "0 line runs\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
     "Subway mySub=new Subway();\n",
     "mySub.run()"
    ]
@@ -1450,12 +1459,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1474,17 +1480,6 @@
       "|  Replaced class Subway\r\n",
       "|    Update replaced variable mySub, reset to null\r\n",
       "|    Update overwrote class Subway\r\n",
-      "\r\n",
-      " \r\n",
-      "\r\n",
-      " Subway mySub=new Subway();\r\n",
-      "|  Modified variable mySub of type Subway with initial value Subway@6e06451e\r\n",
-      "|    Update overwrote variable mySub\r\n",
-      "\r\n",
-      " mySub.setLine(3)\r\n",
-      "\r\n",
-      " mySub.run()\r\n",
-      "3 line runs\r\n",
       "\r\n"
      ]
     }
@@ -1498,8 +1493,36 @@
     "    void setLine(int l) {\n",
     "        line=l;\n",
     "    }\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Subway mySub=new Subway();\r\n",
+      "|  Modified variable mySub of type Subway with initial value Subway@3159c4b8\r\n",
+      "|    Update overwrote variable mySub\r\n",
+      "\r\n",
+      " mySub.setLine(3)\r\n",
+      "\r\n",
+      " mySub.run()\r\n",
+      "3 line runs\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
     "Subway mySub=new Subway();\n",
     "mySub.setLine(3)\n",
     "mySub.run()"
@@ -1628,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1650,13 +1673,20 @@
       "     }\r\n",
       " }\r\n",
       "|  Replaced class Hello\r\n",
-      "|    Update replaced variable h which cannot be referenced until this error is corrected: \r\n",
+      "|    Update replaced variable h1 which cannot be referenced until this error is corrected: \r\n",
       "|      constructor Hello in class Hello cannot be applied to given types;\r\n",
       "|        required: java.lang.String\r\n",
       "|        found: no arguments\r\n",
       "|        reason: actual and formal argument lists differ in length\r\n",
-      "|      Hello h=new Hello();\r\n",
-      "|              ^---------^\r\n",
+      "|      Hello h1=new Hello();\r\n",
+      "|               ^---------^\r\n",
+      "|    Update replaced variable h2 which cannot be referenced until this error is corrected: \r\n",
+      "|      constructor Hello in class Hello cannot be applied to given types;\r\n",
+      "|        required: java.lang.String\r\n",
+      "|        found: no arguments\r\n",
+      "|        reason: actual and formal argument lists differ in length\r\n",
+      "|      Hello h2=new Hello();\r\n",
+      "|               ^---------^\r\n",
       "|    Update overwrote class Hello\r\n",
       "\r\n"
      ]
@@ -1687,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1697,8 +1727,7 @@
      "output_type": "stream",
      "text": [
       " Hello h=new Hello(\"world\");\r\n",
-      "|  Replaced variable h of type Hello with initial value Hello@5649fd9b\r\n",
-      "|    Update overwrote variable h\r\n",
+      "|  Added variable h of type Hello with initial value Hello@5025a98f\r\n",
       "\r\n",
       " h.sayHello();\r\n",
       "hello world\r\n",
@@ -1713,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -3015,21 +3044,14 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Java 9",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "file_extension": ".class",
+   "mimetype": "application/java-vm",
+   "name": "java"
   }
  },
  "nbformat": 4,
