--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 2. Class and Objects\n",
     "\n",
-    "Last updated 20180521MON1300 20180328WEB1730 20180325SUN0830\n",
+    "Last updated 20190319TUE1200 20180328WEB1730 20180325SUN0830\n",
     "\n",
     "## 2.1 학습내용\n",
     "\n",
@@ -422,7 +422,7 @@
     }
    },
    "source": [
-    "### 클래스를 그려보기\n",
+    "### 클래스 UML\n",
     "\n",
     "커피를 클래스로 만들어 보자.\n",
     "생각나는대로 자판으로 가서 프로그램을 바로 작성하기 보다는 그림, UML을 그려보자.\n",
@@ -1216,8 +1216,8 @@
     }
    },
    "source": [
-    "private으로 'toWhom'을 데이터를 보호하지 않았다면 바로 변경이 가능했을 것이다.\n",
-    "이렇게 멤버변수를 public으로 하고 누구나 직접 사용하게 한다면 `캡슐화`를 하지 못하게 된다.\n",
+    "**private**으로 'toWhom'을 데이터를 보호하지 않았다면 바로 변경이 가능했을 것이다.\n",
+    "이렇게 멤버변수를 **public**으로 하고 누구나 직접 사용하게 한다면 `캡슐화`를 하지 못하게 된다.\n",
     "\n",
     "```java\n",
     "h2.toWhom=\"jsl\";\n",
@@ -1374,10 +1374,10 @@
     "\n",
     "데이터 타잎 | 기본 값 (default value)\n",
     "----------|----------\n",
-    "byte, short, int, long, float, double | 0 (소수점일 경우 0.0)\n",
-    "char | u0000\n",
-    "String (또는 객체) | null\n",
-    "boolean | false"
+    "byte, short, int, long, float, double | **0** (소수점일 경우 **0.0**)\n",
+    "char | **u0000**\n",
+    "String (또는 객체) | **null**\n",
+    "boolean | **false**"
    ]
   },
   {
