--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -2566,6 +2566,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# %load src/j_1_Person.java\n",
+    "public class j_1_Person {\n",
+    "    private String name;\n",
+    "    private float weight;\n",
+    "    public j_1_Person(String name){\n",
+    "        this.name=name;\n",
+    "    }\n",
+    "    public String getName() {\n",
+    "        return name;\n",
+    "    }\n",
+    "    public float getWeight() {\n",
+    "        return weight;\n",
+    "    }\n",
+    "    public void setWeight(float weight) {\n",
+    "        this.weight=weight;\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        j_1_Person p=new j_1_Person(\"Kim\");\n",
+    "        p.setWeight((float)65.0);\n",
+    "        System.out.println(p.getName() + \" \" + p.getWeight() + \"Kg\");\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -3044,14 +3079,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Java 9",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
   },
   "language_info": {
-   "file_extension": ".class",
-   "mimetype": "application/java-vm",
-   "name": "java"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
