--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 3. 데이터 타잎과 연산자\n",
     "\n",
-    "Last updated 20180521MON1300 20180404WED1100 20180309FRI\n",
+    "Last updated 20190326TUE0620 20180521MON1300\n",
     "\n",
     "## 3.1 학습내용\n",
     "\n",
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -557,8 +557,8 @@
       " System.out.printf(\"size:%-2s min:%-20s max:%s\\n\",Byte.SIZE,Byte.MIN_VALUE,Byt \r",
       "e.MAX_VALUE);\r\n",
       "size:8  min:-128                 max:127\r\n",
-      "|  Expression value is: java.io.PrintStream@4f7d0008\r\n",
-      "|    assigned to temporary variable $1 of type PrintStream\r\n",
+      "|  Expression value is: java.io.PrintStream@59ec2012\r\n",
+      "|    assigned to temporary variable $2 of type PrintStream\r\n",
       "\r\n"
      ]
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1035,7 +1035,7 @@
      "text": [
       " 5/9\r\n",
       "|  Expression value is: 0\r\n",
-      "|    assigned to temporary variable $29 of type int\r\n",
+      "|    assigned to temporary variable $1 of type int\r\n",
       "\r\n"
      ]
     }
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
