--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -3074,6 +3074,64 @@
     "int getNumber()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "다음 출력결과가 나오도록 프로그램을 완성하세요.\n",
+    "아직 if문은 배우지 않았으므로 제외해도 됩니다.\n",
+    "```python\n",
+    "A:4\n",
+    "B:3\n",
+    "A wins\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# %load src/com/sd/dice/DiceV0Main.java\n",
+    "package com.sd.dice;\n",
+    "public class DiceV0Main {\n",
+    "    private int number = 0;\n",
+    "    public void roll() {\n",
+    "        number = (int) (Math.random() * 6)+1;\n",
+    "        System.out.println(\"turns on \" + number);\n",
+    "    }\n",
+    "    public int getNumber() {\n",
+    "        return number;\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        DiceV0Main d1=new DiceV0Main();\n",
+    "        DiceV0Main d2=new DiceV0Main();\n",
+    "        d1.roll();\n",
+    "        d2.roll();\n",
+    "        System.out.println(\"A:\"+d1.getNumber());\n",
+    "        System.out.println(\"B:\"+d2.getNumber());\n",
+    "        String message;\n",
+    "        if (d1.getNumber() > d2.getNumber()) {\n",
+    "           message=\"A wins\";\n",
+    "        }\n",
+    "        else if (d1.getNumber() < d2.getNumber()) {\n",
+    "           message=\"B wins\";\n",
+    "        }\n",
+    "        else\n",
+    "           message=\"tie\";\n",
+    "        System.out.println(message);\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
