--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -2529,7 +2529,8 @@
    "source": [
     "### 버전 1\n",
     "\n",
-    "currentTimeMillis()를 구해서, Date()로 출력한다. 현지시간을 알 수 있다."
+    "currentTimeMillis()를 구해서, Date()로 출력한다. 현지시간을 알 수 있다.\n",
+    "https://www.epochconverter.com/에서 현재시간으로 변환해 볼 수 있다."
    ]
   },
   {
@@ -2545,12 +2546,12 @@
      "output_type": "stream",
      "text": [
       " long totalMilliseconds = System.currentTimeMillis();\r\n",
-      "|  Added variable totalMilliseconds of type long with initial value 1526875072931\r\n",
+      "|  Added variable totalMilliseconds of type long with initial value 1554172041415\r\n",
       "\r\n",
       " \r\n",
       "\r\n",
       " System.out.println(\"현재시간: \" + new Date(totalMilliseconds));\r\n",
-      "현재시간: Mon May 21 12:57:52 KST 2018\r\n",
+      "현재시간: Tue Apr 02 11:27:21 KST 2019\r\n",
       "\r\n"
      ]
     }
@@ -2576,7 +2577,7 @@
       " import java.text.DateFormat;\r\n",
       "\r\n",
       " DateFormat.getInstance().format(totalMilliseconds);\r\n",
-      "|  Expression value is: \"5/21/18, 12:57 PM\"\r\n",
+      "|  Expression value is: \"4/2/19, 11:27 AM\"\r\n",
       "|    assigned to temporary variable $4 of type String\r\n",
       "\r\n"
      ]
@@ -2998,21 +2999,14 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Java 9",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "file_extension": ".class",
+   "mimetype": "application/java-vm",
+   "name": "java"
   }
  },
  "nbformat": 4,
